# ComfyUI_LayerStyle

./: .gitignore  LICENSE  README.MD  README_CN.MD  __init__.py  api_key.ini  api_key.ini.example  custom_size.ini  custom_size.ini.example  dzNodes.json  dzNodes.py  install_requirements.bat  install_requirements_aki.bat  pyproject.toml  repair_dependency.bat  repair_dependency_aki.bat  repair_dependency_list.txt  requirements.txt  resource_dir.ini  resource_dir.ini.example
js/: comfy_shared.js  debug.js  dz_comfy_shared.js  dz_debug.js  dz_mtb_widgets.js  dz_node_palette.js  dz_parse-css.js  dz_widgets.js  mtb_widgets.js  parse-css.js
lut/: BlueArchitecture.cube
py/: Qwen_image2prompt.py  TextJoin.py  add_grain.py  any_rerouter.py  batch_selector.py  ben_ultra.py  birefnet_func.py  birefnet_legacy.py  birefnet_ultra.py  birefnet_ultra_v2.py  blend_if_mask.py  blendmodes.py  briarmbg.py  channel_shake.py  check_mask.py  check_mask_v2.py  color_adapter.py  color_correct_HSV.py  color_correct_LAB.py  color_correct_LUTapply.py  color_correct_RGB.py  color_correct_YUV.py  color_correct_auto_adjust.py  color_correct_auto_adjust_v2.py  color_correct_auto_brightness.py  color_correct_brightness&contrast.py  color_correct_brightness_and_contrast.py  color_correct_color_balance.py  color_correct_color_temperature.py  color_correct_exposure.py  color_correct_gamma.py  color_correct_levels.py  color_correct_shadow&highlight.py  color_correct_shadow_and_highlight.py  color_image.py  color_image_v2.py  color_image_v3.py  color_map.py  color_name.py  color_negative.py  (+150 more)
resource/: inference.prompt
whl/: docopt-0.6.2-py2.py3-none-any.whl  hydra_core-1.3.2-py3-none-any.whl
workflow/: auto_adjust_v2_example.json  auto_brightness_example.json  blend_mode_v2_example.json  blendif_mask_example.json  choice_text_preset_example.json  color_of_shadow_and_highlight_example.json  color_overlay_example.json  create_gradient_mask_example.json  crop_by_mask_&_restore_crop_box_example.json  data_nodes_example.json  distort_displace_example.json  draw_bbox_mask_example.json  drop_shadow_example.json  extend_canvas_example.json  florence2_image2prompt_example.json  florence2_ultra_example.json  flux_kontext_image_scale_example.json  get_color_tone_v2_example.json  get_main_color_and_color_name_example.json  get_main_color_example.json  gradident_overlay_example.json  hl_frequency_detail_restore_example.json  icmask_example.json  if_example.json  image_blend_advance_example.json  image_blend_example.json  image_composite_handle_mask_example.json  image_hub_example.json  image_mask_scale_as_example.json  image_reel_example.json  image_remove_alpha & image_combine_alpha_example.json  image_reward_filter_example.json  image_scale_restore_example.json  image_tagger_save_example.json  image_to_mask_example.json  inner_glow_example.json  inner_shadow_example.json  lama_example.json  (+32 more)
(+211 files in other folders)
